# gt_ternary_fix

./: CMakeLists.txt  README.md  copy_neighbor_gtfn.hpp  copy_neighbor_gtfn_bindings.cpp  nabla4_gtfn.hpp  nabla4_gtfn_bindings.cpp  requirements.txt  run_nabla4.py  timer.hpp
